# Shellscribe

./: .gitignore  .scribeconf  CMakeLists.txt  README.md
.github/workflows/: build.yaml
docs/: annotations_list.md  configuration_reference.md  example.md
include/core/: model.h  shellscribe.h
include/parsers/: alert.h  alias.h  annotation.h  argument.h  deprecated.h  description.h  example.h  exitcode.h  function.h  internal.h  io.h  metadata.h  option.h  parser_engine.h  reference.h  return.h  section.h  shellcheck.h  state.h  tag.h  types.h  variable.h
include/renderers/: docblock.h  github.h  markdown.h  renderer_engine.h  style.h  table_of_content.h
include/utils/: config.h  debug.h  memory.h  string.h
src/: main.c
src/core/: model.c  shellscribe.c
src/parsers/: alert.c  alias.c  annotation.c  argument.c  deprecated.c  description.c  example.c  exitcode.c  function.c  internal.c  io.c  metadata.c  option.c  parser_engine.c  reference.c  return.c  section.c  shellcheck.c  state.c  tag.c  types.c  variable.c
src/renderers/: docblock.c  github.c  markdown.c  renderer_engine.c  style.c  table_of_content.c
src/utils/: config.c  debug.c  memory.c  string.c
